docs/core/v0.7/_sources/reference/tmlt/core/transformations/identity/index.rst.txt



***************
identity
***************

.. py:module:: tmlt.core.transformations.identity

.. autoapi-nested-parse::

   Identity transformation.











Classes
=======

.. list-table::

   * - :class:`.Identity`
     - Identity transformation.

   
.. py:class:: Identity(metric, domain)

   Bases: :class:`tmlt.core.transformations.base.Transformation`

   Identity transformation.






   .. automethod:: __init__
   .. py:method:: stability_function(self, d_in)

      Returns the smallest d_out satisfied by the transformation.

      The returned d_out is d_in.

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(self, data)

      Return data.


   .. py:method:: input_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: output_domain(self)
      :property:

      Return input domain for the measurement.


   .. py:method:: output_metric(self)
      :property:

      Distance metric on input domain.


   .. py:method:: stability_relation(self, d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(self, other: Transformation) -> Transformation
               __or__(self, other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.






