docs/core/v0.20/_sources/reference/tmlt/core/transformations/identity/index.rst.txt



***************
identity
***************

.. py:module:: tmlt.core.transformations.identity

.. autoapi-nested-parse::

   Identity transformation.











Classes
=======

.. list-table::

   * - :class:`.Identity`
     - Identity transformation.

   
.. py:class:: Identity(metric, domain)

   Bases: :class:`tmlt.core.transformations.base.Transformation`

   Identity transformation.






   .. py:property:: input_domain
      :type: tmlt.core.domains.base.Domain


      Return input domain for the measurement.

   .. py:property:: input_metric
      :type: tmlt.core.metrics.Metric


      Distance metric on input domain.

   .. py:property:: output_domain
      :type: tmlt.core.domains.base.Domain


      Return input domain for the measurement.

   .. py:property:: output_metric
      :type: tmlt.core.metrics.Metric


      Distance metric on input domain.


   .. automethod:: __init__
   .. py:method:: stability_function(d_in)

      Returns the smallest d_out satisfied by the transformation.

      The returned d_out is d_in.

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(data)

      Return data.


   .. py:method:: stability_relation(d_in, d_out)

      Returns True only if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under input_metric.
      :param d_out: Distance between outputs under output_metric.


   .. py:method:: __or__(other: Transformation) -> Transformation
                  __or__(other: tmlt.core.measurements.base.Measurement) -> tmlt.core.measurements.base.Measurement

      Return this transformation chained with another component.


   .. py:method:: format()

      Return a human-readable multi-line description of this object.






